[package]
name = "call32"
version = "0.0.1"
edition = "2021"
authors = ["Connor Power <connor@connorpower.com>"]

[dependencies]
thiserror = "1.0.37"
paste = "1.0.9"

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
    "Win32_System_Com",
]

[dev-dependencies]
pretty_assertions = "1.3.0"
